--- a/logger_app/app/src/main/res/layout/nav_header_main.xml
+++ b/logger_app/app/src/main/res/layout/nav_header_main.xml
@@ -21,6 +21,12 @@
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
+        android:id="@+id/home_version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="VERSION : "/>
+
+    <TextView
         android:id="@+id/home_header_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
